# Cpp-Mandelbrot

./: CMakeLists.txt  README.md
src/: AutoSave.cpp  AutoSave.h  BufferEffects.cpp  BufferEffects.h  Constants.cpp  Constants.h  ImageBuffer.h  ImageIO.cpp  ImageIO.h  ImageIO_PPM.cpp  ImageIO_PPM.h  ImageWriter.cpp  ImageWriter.h  ImageWriterPPM.cpp  ImageWriterPPM.h  MandelbrotPanel.cpp  MandelbrotPanel.h  MessageQueue.h  SaveJob.cpp  SaveJob.h  WaitingSaveJobs.cpp  WaitingSaveJobs.h  mandelbrot.cpp  mandelbrot.h  mandelbrot_gui.cpp  mandelbrot_gui.h
